--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
-﻿fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-multipart==0.0.9
-
-sqlmodel==0.0.22
-sqlalchemy==2.0.36
+﻿fastapi>=0.115
+uvicorn[standard]>=0.30
+sqlalchemy>=2.0
+sqlmodel>=0.0.20
+psycopg[binary]>=3.1
+alembic>=1.13
+pydantic>=2
